--- a/templates/employee/manage.html.twig
+++ b/templates/employee/manage.html.twig
@@ -22,7 +22,7 @@
             {% endfor %}
             
             </div>
-            <div class="title">Manage Your Office</div>
+            <div class="title">Your Courier.PO Office Manager</div>
             <div class="subtitle">{{ branch }} Office <br/></div>
         </div>
 
