--- a/templates/employee_layout.html.twig
+++ b/templates/employee_layout.html.twig
@@ -34,7 +34,7 @@
         </a>
 
         <div class="navbar-dropdown">
-          <a class="navbar-item">
+          <a class="navbar-item" href="{{ path('app-employee-reports')}}">
             View CourierPO Reports
           </a>
         </div>
