--- a/templates/home/home.html.twig
+++ b/templates/home/home.html.twig
@@ -63,20 +63,22 @@
             <div class="tile is-ancestor">
                     <div class="tile is-parent">
                         <article class="tile is-child box">
-                        <p class="title">One</p>
-                        <p class="subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque risus mi, tempus quis placerat ut, porta nec nulla. Vestibulum rhoncus ac ex sit amet fringilla. Nullam gravida purus diam, et dictum felis venenatis efficitur. Aenean ac eleifend lacus, in mollis lectus. Donec sodales, arcu et sollicitudin porttitor, tortor urna tempor ligula, id porttitor mi magna a neque. Donec dui urna, vehicula et sem eget, facilisis sodales sem. </p>
+                        <p class="title">Ship</p>
+                        <p class="subtitle">Courier.PO makes shipping easy. We will pick up the packages from your home
+and drop them off fast! Ship with and we will get the job done right!</p>
                         </article>
                     </div>
                     <div class="tile is-parent">
                         <article class="tile is-child box">
-                        <p class="title">Two</p>
-                        <p class="subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque risus mi, tempus quis placerat ut, porta nec nulla. Vestibulum rhoncus ac ex sit amet fringilla. Nullam gravida purus diam, et dictum felis venenatis efficitur. Aenean ac eleifend lacus, in mollis lectus. Donec sodales, arcu et sollicitudin porttitor, tortor urna tempor ligula, id porttitor mi magna a neque. Donec dui urna, vehicula et sem eget, facilisis sodales sem. </p>
+                        <p class="title">Track</p>
+                        <p class="subtitle">Tracking can be accomplished in a couple of ways. Customers can view all their sent packages
+when they log in and can track using the tracking number as well. </p>
                         </article>
                     </div>
                     <div class="tile is-parent">
                         <article class="tile is-child box">
-                        <p class="title">Three</p>
-                        <p class="subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque risus mi, tempus quis placerat ut, porta nec nulla. Vestibulum rhoncus ac ex sit amet fringilla. Nullam gravida purus diam, et dictum felis venenatis efficitur. Aenean ac eleifend lacus, in mollis lectus. Donec sodales, arcu et sollicitudin porttitor, tortor urna tempor ligula, id porttitor mi magna a neque. Donec dui urna, vehicula et sem eget, facilisis sodales sem. </p>
+                        <p class="title">Enjoy</p>
+                        <p class="subtitle">With the holidays coming up it would suck to get a late package! Get your gifts to your family on time! </p>
                         </article>
                     </div>
                     </div>
