--- a/templates/employee/reports.html.twig
+++ b/templates/employee/reports.html.twig
@@ -135,7 +135,7 @@
                     <th>{{ each.FirstName }} {{ each.MiddleName }}. {{ each.LastName }}</th>
                     <th>{{ each.VehicleID }}</th>
                     <th>{{ each.TotalP }}</th>
-                    <th></th>
+                    <th>{{ each.TotalDelivered }}</th>
                     <th>{{ each.Clock_in_dateTime }}</th>
                     <th>{{ each.Hours_Worked }}</th>
 
