Updated database and code to produce working reports.

--- a/templates/employee/reports.html.twig
+++ b/templates/employee/reports.html.twig
@@ -89,7 +89,7 @@
             <tbody>
             {% for each in reportOfficeStats %}
                     <tr>
-                    <th>{{ each.OfficeID }}</th>
+                    <th>{{ each.return_office }}</th>
                     <th>{{ each.TotalPackages }}</th>
                     <th>${{ each.TotalRev }}</th>
                     </tr>
