--- a/templates/employee/reports.html.twig
+++ b/templates/employee/reports.html.twig
@@ -34,6 +34,7 @@
         <div style="overflow-x: auto;">
 
         <h1> Employee-Package Tracking Report </h1>
+        Below is a detailed report of each package, its journey and current status. Use this if something happens to a package, to find its last known handler and vehicle.
         <table class="table is-fullwidth">
             <thead>
             <tr>
@@ -77,6 +78,7 @@
         <div class="container">
         <div style="overflow-x: auto;">
         <h1> Office Revenue Report </h1>
+        Below is a report of how many orders each office has had and its total revenue.
         <table class="table is-fullwidth">
             <thead>
             <tr>
@@ -116,14 +118,14 @@
         <div class="container">
         <div style="overflow-x: auto;">
         <h1> Employee Stats Last 30 Days </h1>
-        Below shows each employee and their logged hours worked over the last 30 days.
+        Below shows each employee and their logged information over the past 30 days. This includes their hours worked and all unique packages delivered either to other offices or to their destination.
         <table class="table is-fullwidth">
             <thead>
             <tr>
                 <th>Office</th>
                 <th>Employee ID</th>
                 <th>Employee Name</th>
-
+                <th>Packages Delivered</th>
                 <th>Hours Worked</th>
             </tr>
             </thead>
@@ -133,6 +135,7 @@
                     <th> {{each.OfficeID}}</th>
                     <th>{{ each.EmployeeID }}</th>
                     <th>{{ each.FirstName }} {{ each.MiddleName }}. {{ each.LastName }}</th>
+                    <th>{{each.Delivered}}</th>
                     <th>{{ each.TotalHours }}</th>
 
                     </tr>
@@ -147,6 +150,7 @@
         <div class="container">
         <div style="overflow-x: auto;">
         <h1> Employee Shift Details Report </h1>
+        Below is a detailed log of each shift logged by an employee, including their hours worked that shift, which vehicle was used, and how many packages they delivered.
         <table class="table is-fullwidth">
             <thead>
             <tr>
@@ -154,7 +158,7 @@
                 <th>Employee ID</th>
                 <th>Employee Name</th>
                 <th>Vehicle Used (VIN)</th>
-
+                <th>Packages Delivered</th>
                 <th>Date</th>
                 <th>Hours Worked</th>
             </tr>
@@ -166,7 +170,7 @@
                     <th>{{ each.EmployeeID }}</th>
                     <th>{{ each.FirstName }} {{ each.MiddleName }}. {{ each.LastName }}</th>
                     <th>{{ each.VehicleID }}</th>
-
+                    <th>{{each.Delivered}}</th>
                     <th>{{ each.Clock_in_dateTime }}</th>
                     <th>{{ each.Hours_Worked }}</th>
 
