--- a/templates/employee/reports.html.twig
+++ b/templates/employee/reports.html.twig
@@ -174,6 +174,7 @@
             <thead>
             <tr>
                 <th>Shift ID</th>
+                <th>Office</th>
                 <th>Employee ID</th>
                 <th>Employee Name</th>
                 <th>Vehicle Used (VIN)</th>
@@ -186,6 +187,7 @@
                 {% for each in reportEmployeeStats %}
                     <tr>
                     <th>{{ each.ShiftSession }}</th>
+                    <th>{{ each.OfficeID }}</th>
                     <th>{{ each.EmployeeID }}</th>
                     <th>{{ each.FirstName }} {{ each.MiddleName }}. {{ each.LastName }}</th>
                     <th>{{ each.VehicleID }}</th>
